insatall app local pc and app fix to runnig